--- a/index.html
+++ b/index.html
@@ -7,7 +7,13 @@
   </head>
   <body>
     <main>
-        
+        <div id="ft">
+            <li><a href="#"></a>Yahoo</li>
+            <li><a href="#"></a>Help</li>
+            <li><a href="#"></a>Privacy (Updated)</li>
+            <li><a href="#"></a>Terns (Updated)</li>
+            <li><a href="#"></a>Advertise</li>
+        </div>
     </main>
   </body>
 </html>
