footer done, css looks great

--- a/index.html
+++ b/index.html
@@ -8,11 +8,13 @@
   <body>
     <main>
         <div id="ft">
-            <li><a href="#"></a>Yahoo</li>
-            <li><a href="#"></a>Help</li>
-            <li><a href="#"></a>Privacy (Updated)</li>
-            <li><a href="#"></a>Terns (Updated)</li>
-            <li><a href="#"></a>Advertise</li>
+            <ul>
+                <li id="yahoo-name">Yahoo</li>
+                <li><a href="#"></a><span class="small-blue-words">Help</span></li>
+                <li><a href="#"></a><span class="small-blue-words">Privacy</span><span class="updated">(Updated)</span></li>
+                <li><a href="#"></a><span class="small-blue-words">Terms</span><span class="updated">(Updated)</span></li>
+                <li><a href="#"></a><span class="small-blue-words">Advertise</span></li>
+            </ul>
         </div>
     </main>
   </body>
