yahoo logo centered in a div, no search bar

--- a/index.html
+++ b/index.html
@@ -7,14 +7,22 @@
   </head>
   <body>
     <main>
-        <div id="ft">
-            <ul>
-                <li id="yahoo-name">Yahoo</li>
-                <li><a href="#"></a><span class="small-blue-words">Help</span></li>
-                <li><a href="#"></a><span class="small-blue-words">Privacy</span><span class="updated">(Updated)</span></li>
-                <li><a href="#"></a><span class="small-blue-words">Terms</span><span class="updated">(Updated)</span></li>
-                <li><a href="#"></a><span class="small-blue-words">Advertise</span></li>
-            </ul>
+        <div id="site">
+            <!-- this div holds the logo and search bar -->
+            <div id="bd">
+                <img id="yahoo-logo" src="Yahoo-logo.png" width="142" height="37">
+            </div>
+
+            <!-- footer -->
+            <div id="ft">
+                <ul>
+                    <li id="yahoo-name">Yahoo</li>
+                    <li><a href="#"></a><span class="small-blue-words">Help</span></li>
+                    <li><a href="#"></a><span class="small-blue-words">Privacy</span><span class="updated">(Updated)</span></li>
+                    <li><a href="#"></a><span class="small-blue-words">Terms</span><span class="updated">(Updated)</span></li>
+                    <li><a href="#"></a><span class="small-blue-words">Advertise</span></li>
+                </ul>
+            </div>
         </div>
     </main>
   </body>
