searchbar and button but ugly

--- a/index.html
+++ b/index.html
@@ -2,18 +2,27 @@
 <html>
   <head>
     <title>Yahoo Search - Web Search</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="main.css">
     <meta name="description" content="The search engine that helps you find exactly what you\'re looking for. Find the most relevant information, video, images, and answers from all across the Web.">
   </head>
   <body>
     <main>
         <div id="site">
-            <!-- this div holds the logo and search bar -->
+            <!-- LOGO + SEARCH BAR -->
             <div id="bd">
+                <!-- LOGO -->
                 <img id="yahoo-logo" src="Yahoo-logo.png" width="142" height="37">
+                <div>
+                    <!-- SEARCH BAR -->
+                    <form id="search-menu" action="">
+                        <input id="search-bar" type="text" placeholder="" name="search">
+                        <button id="search-button" type="submit"><i class="fa fa-search"></i></button>
+                    </form> 
+                </div>
             </div>
 
-            <!-- footer -->
+            <!-- FOOTER -->
             <div id="ft">
                 <ul>
                     <li id="yahoo-name">Yahoo</li>
