using w3schools searchbar

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
                 <img id="yahoo-logo" src="Yahoo-logo.png" width="142" height="37">
                 <div>
                     <!-- SEARCH BAR -->
-                    <form id="search-menu" action="">
-                        <input id="search-bar" type="text" placeholder="" name="search">
-                        <button id="search-button" type="submit"><i class="fa fa-search"></i></button>
-                    </form> 
+                    <form class="example" action="action_page.php">
+                        <input type="text" placeholder="Search.." name="search">
+                        <button type="submit"><i class="fa fa-search"></i></button>
+                      </form>
                 </div>
             </div>
 
