--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                 <div>
                     <!-- SEARCH BAR -->
                     <form class="example" action="action_page.php">
-                        <input type="text" placeholder="Search.." name="search">
+                        <input type="text" placeholder="" name="search">
                         <button type="submit"><i class="fa fa-search"></i></button>
                       </form>
                 </div>
